Store attendance punch photos on S3 in production.
Fix verified check-in failures caused by a non-writable container filesystem by uploading selfies to S3 (with a writable local fallback) and logging storage errors with context.

Co-authored-by: Cursor <cursoragent@cursor.com>